[metadata]
name = ldap-ssh-key-webui
author = John Celoria
author-email = john@celoria.net
summary = LDAP/AD SSH Key Manager
license = MIT
description-file =
    README.md
home-page = https://github.com/jceloria/ldap-ssh-key-webui
requires-python = >=3.5
classifier = 
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    ldap-ssh-key-webui
