[metadata]
name = adkey
author = John Celoria
author-email = john@celoria.net
summary = LDAP/AD SSH Key Manager
license = MIT
description-file = README.md
home-page = https://github.com/jceloria/adkey
project_urls =
    Source Code = https://github.com/jceloria/adkey
requires-python = >=3.6
classifier = 
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    adkey

[global]
setup-hooks =
    pbr.hooks.setup_hook
